compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__todo__piped.snap
---
source: compiler-core/src/erlang/tests/todo.rs
expression: "\n     pub fn main() {\n      \"lets\"\n      |> todo as \"pipe\"\n      |> todo as \"other todo\"\n    }\n    "
---
----- SOURCE CODE

     pub fn main() {
      "lets"
      |> todo as "pipe"
      |> todo as "other todo"
    }
    

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 2).
-spec main() -> any().
main() ->
    _pipe = <<"lets"/utf8>>,
_pipe@1 = (erlang:error(#{gleam_error => todo,
        message => <<"pipe"/utf8>>,
        file => <<?FILEPATH/utf8>>,
        module => <<"my/mod"/utf8>>,
        function => <<"main"/utf8>>,
        line => 4}))(_pipe),
(erlang:error(#{gleam_error => todo,
        message => <<"other todo"/utf8>>,
        file => <<?FILEPATH/utf8>>,
        module => <<"my/mod"/utf8>>,
        function => <<"main"/utf8>>,
        line => 5}))(_pipe@1).
